--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,25 @@ a svg {
     max-width: 85vw;
     max-height: 100vh;
     border-radius: 5px;
-    /* box-shadow: 0px 5px 35px 9px #464a92; */
     box-shadow: 0px 5px 35px 9px #ccc;
     z-index: 100;
+    height: 50%;
 }
+
+#chatboxbody{
+    position: relative;
+    height: 78%;
+    overflow: hidden;
+    border: 1px solid #ccc;
+}
+
+.chat-box-header {
+    background: #5A5EB9;
+    height:70px;
+    border-top-left-radius:5px;
+    border-top-right-radius:5px; 
+    color:white;
+    text-align:center;
+    font-size:20px;
+    padding-top:17px;
+  }
